# logferry

./: BASICS.md  Cargo.toml  EXPLAINER.md  README.md  SETUP.md  TUTORIALS.md  pyproject.toml  python_demo.py
docs/: README.md
docs/01-getting-started/: README.md  ide-setup.md  installation.md  what-is-rust.md  your-first-project.md
docs/02-rust-language-fundamentals/: README.md  borrowing-and-slices.md  closures-and-iterators.md  collections.md  error-handling.md  functions-and-control-flow.md  modules-and-crates.md  ownership.md  structs-and-enums.md  traits-and-generics.md  variables-and-types.md
docs/03-project-setup-and-tooling/: README.md  cargo-in-depth.md  daily-workflow.md  dependencies.md  testing.md
docs/04-pyo3-and-logferry/: README.md  distribution.md  error-handling-pyo3.md  exposing-classes.md  exposing-functions.md  logferry-walkthrough.md  multithreading-and-gil.md  pyo3-overview.md
docs/05-reference/: README.md  cargo-cheatsheet.md  python-to-rust-cheatsheet.md  troubleshooting.md
scripts/: python_demo.py
src/: lib.rs
