[package]
name = "logferry"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded JSON log ingestor, exposed to Python via PyO3."

[lib]
name = "logferry"
# cdylib  -> the .so/.pyd Python actually imports
# rlib    -> lets `cargo test` run the pure-Rust logic without a Python interpreter
crate-type = ["cdylib", "rlib"]

[dependencies]
# extension-module tells PyO3 not to link libpython directly; Python provides
# its own symbols at import time. Required for building an importable module.
pyo3 = { version = "0.20.3", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
